Home, garantee and products

--- a/index.html
+++ b/index.html
@@ -138,8 +138,86 @@
         </div>
     </div>
 
-    <div class="container-lg">
+    <div class="container-lg warranty">
+        <h3> <br> We promote <br> the best consumer experience</h3>
+        <img src="./assets/Home/satisfaction.svg" alt="satisfaction" class="garantee">
+        <div class="row">
+            <div class="col">
+                <div class="content first">
+                    <div class="mark"><img src="./assets/Home/quality.svg" alt="quality"></div>
+                    <h5>High-quality products</h5>
+                    <p>
+                        We only work with renowned and trusted brands, ensuring that each item in our catalog meets the
+                        highest standards.
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="content second">
+                    <div class="mark"><img src="./assets/Home/package.svg" alt="quality"></div>
+                    <h5>New stock daily</h5>
+                    <p>
+                        Our team is constantly researching and selecting the best items to add to our inventory.
+                    </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="content third">
+                    <div class="mark"><img src="./assets/Home/truck.svg" alt="quality"></div>
+                    <h5>Fast and free shipping</h5>
+                    <p>
+                        As soon as you place your order, our team will take care of all the details to ensure it is
+                        processed and shipped as quickly as possible.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="container-lg categories products">
+        <h2>Featured Products</h2>
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <a type="button" class="cart"><img src="./assets/Home/cart.svg" width="23" alt="cart"><a>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
