home page conclusion

--- a/index.html
+++ b/index.html
@@ -212,6 +212,94 @@
                     <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <a type="button" class="cart"><img src="./assets/Home/cart.svg" width="23" alt="cart"><a>
+                                <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                                <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$
+                                        58</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg products all" id="more">
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
+                        <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
+                        <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 15rem;">
+                    <img src="./assets/Home/orquidea.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="cart"><img src="./assets/Home/cart.svg" width="22" alt="cart"></div>
                         <p class="card-text" style="margin-top: -12px;"><strong>Orchid</strong></p>
                         <p class="card-text" style="margin-top: -18px; margin-bottom: -10px;"><strong>R$ 58</strong></p>
                     </div>
@@ -219,6 +307,85 @@
             </div>
         </div>
     </div>
+
+    <br>
+    <center><button type="button" class="btn-products" id="all" onclick="productsShowHide()">View all products</button>
+    </center>
+    <br>
+
+    <center>
+        <div class="card mb-3 promo" style="max-width: 950px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="./assets/Home/image.svg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body promo-text">
+                        <p class="card-title" font-size="20">LIMITED OFFER</p>
+                        <h2 class="card-text">35% OFF for orders placed <br> until Valentine's Day</h2>
+                        <button class="enjoy">ENJOY <img src="./assets/Home/arrowleft.svg" width="18" alt=""></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </center>
+
+    <center>
+        <h2 style="color: black; margin-top: 35px;">
+            Subscribe to our newsletter to <br> receive updates on our new products
+        </h2>
+        <p style="color: rgba(0, 0, 0, 0.555); font-size: 16;">
+            Get 20% OFF on your first purchase by subscribing to our newsletter
+        </p>
+    </center>
+    <div class="container" style="max-width: 500px;">
+        <div class="email">
+            <img src="./assets/Home/mail.svg" alt="mail" width="25" height="22">
+            <input name="email" id="email" placeholder="Please enter your email">
+        </div>
+        <button type="submit" class="sign">Sign me up <img src="./assets/Home/warrow.svg" width="18"
+                alt="arrow"></button>
+    </div>
+
+    <footer>
+        <div class="flower">
+            <img src="./assets/Home/logo.svg" alt="logo">
+            <p style="color: rgba(0, 0, 0, 0.555); font-size: 16; margin-top: 5px;">
+                The online flower shop for those who <br> don't have time to waste.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h5>Categories</h5>
+                <ul>
+                    <li>Bouquets</li>
+                    <li>Arrangements</li>
+                    <li>Plants</li>
+                    <li>flowers</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h5>Contact</h5>
+                <ul>
+                    <li>Phone</li>
+                    <li>Email</li>
+                    <li>Adress</li>
+                    <li>Box</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h5>About Us</h5>
+                <ul>
+                    <li>History</li>
+                    <li>Mission</li>
+                    <li>Vision</li>
+                    <li>Values</li>
+                </ul>
+            </div>
+        </div>
+        <div class="divider"></div>
+        <p class="right">All rights reserved - Flor & Cultura</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
